--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
 			<p>Thanks for stopping by!</p>
 			<br>
 			<p>(Enter at 'A' to start your dressage test!)</p>
-<img src="url" alt="some_text" style="width:width;height:height;">
+			</div>
+
+		<div class="images">
+			<img src="assets/images/http-%2F%2Fcdn.evbuc.com%2Fimages%2F23021409%2F182915734575%2F1%2Foriginal.jpg" alt="horse-riders" style="width: 400px;height: 200px;">
 		</div>
 	</main>
-<img src="url" alt="some_text" style="width:width;height:height;">
+
 	<footer>
 		<div class="container">
 			<div class="col-med-2"></div>
