--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -44,17 +44,20 @@
 			<div class="col-med-2"></div>
 		</div>
 		<br>
-
-		<div class="row">
-			<div class="col-med-2"></div>
-				<div class="col-med-8">
-			 	 Veterinarians usually come to your farm to examine their patients for any number of conditions.  Their services include vaccinations for diseases, treatment for hoof and leg conditions, ‘floating’ teeth, prescribing antibiotics and medications for maladies like abscesses and joint pain relief, and pregnancy tests.  You will want their phone on your ‘speed-dial.’
-			 	 </div>
 			<div class="images">
-			 	<img src="assets/images/Surgery1.jpg" alt="Vet-Injection" style="width: 300px; height: 225px">     
-				<img src="assets/images/20130828_133559_2_bestshot_resized_2.jpg" alt="Vet-Floating-Teeth" style="width: 300px; height: 225px">
+			 	<img src="assets/images/Surgery1.jpg" alt="Vet-Injection" style="width: 240px; height: 190px">     
+				<img src="assets/images/20130828_133559_2_bestshot_resized_2.jpg" alt="Vet-Floating-Teeth" style="width: 240px; height: 190px">
+				<img src="assets/images/lisa-steth-cropped.jpg" alt="vet-exam" style="width: 240px; height: 190px">
+				<img src="assets/images/RADS3.jpg" alt="vet-procedure" style="width: 245px; height: 190px">
 			</div>
 		<h3>Equine Veterinary Practices </h3>
+			<div class="row">
+				<div class="col-med-2"></div>
+					<div class="col-med-8">
+			 		 Veterinarians usually come to your farm to examine their patients for any number of conditions.  Their services include vaccinations for diseases, treatment for hoof and leg conditions, ‘floating’ teeth, prescribing antibiotics and medications for maladies like abscesses and joint pain relief, and pregnancy tests.  You will want their phone on your ‘speed-dial.’
+			 		 </div>
+			 	<div class="col-med-2"></div>
+
 		<div class="container">
 			<table class="table table-bordered">
 				<tr>
@@ -109,7 +112,22 @@
 			</table>
 		</div>	
 
-		<h3>Farriers</h3>
+			<div class="row">
+				<h3>Farriers</h3>
+					<div class="col-med-2"></div>
+						<div class="col-med-8">
+							Farriers are very important for the health of your horse. Every 4 - 7 weeks they trim the hooves and put on horseshoes. They make recommendations for foot care treatments.  
+						</div>
+					<div class="col-med-2"></div>
+			</div>
+
+			<div class="images">
+				<img src="assets/images/horse-shoe-110987_960_720.jpg" alt="horseshoes" style="width: 230px; height: 190px">	
+				<img src="assets/images/shoe.40153822_std.jpg" alt="horseshoes" style="width: 240px; height: 190px">
+				<img src="assets/images/flickr.com_anoldent.jpg" alt="farrier" style="width: 210px; height: 190px">
+				<img src="assets/images/157429186.jpg" alt="hot-horseshoe" style="width: 240px; height: 190px;">
+			</div>
+
 		<div class="container">
 			<table class="table table-bordered">
 				<tr>
