--- a/feed-supplies-trailers.html
+++ b/feed-supplies-trailers.html
@@ -45,10 +45,10 @@
 		</div>
 
 		<div  class="images">
-		<img src="assets/images/hay-bale-eaten-middle-horse-1500.jpg" alt="horse-eating-hay" style="width: 280px; height: 230px">
-		<img src="assets/images/49025716-horse-feed.jpg" alt="horse-feed" style="width:250px; height:230px;">
-		<img src="assets/images/s-l1000.jpg" alt="wall-saddle-rack" style="width: 300px; height: 230px">
-		<img src="assets/images/Grooming Kit -blue.jpg" alt="grooming-kit" style="width: 300px; height: 230px">
+		<img src="assets/images/hay-bale-eaten-middle-horse-1500.jpg" alt="horse-eating-hay" style="width: 280px; height: 190px">
+		<img src="assets/images/49025716-horse-feed.jpg" alt="horse-feed" style="width:250px; height:190px;">
+		<img src="assets/images/s-l1000.jpg" alt="wall-saddle-rack" style="width: 300px; height: 190px">
+		<img src="assets/images/Grooming Kit -blue.jpg" alt="grooming-kit" style="width: 300px; height: 190px">
 		</div>
 			<br>
 		<div class="container">
@@ -102,6 +102,12 @@
 		<div class="col-med-2"></div>
 				<div class="col-med-8">Taking your horse off the farm requires trailers. Below is a list of trailer shops, and most offer repairs and service. Sometimes good, used trailers can be found on sites like CraigsList.</div>
 			<div class="col-med-2"></div>
+		</div>
+
+		<div class="images">
+			<img src="assets/images/8351-t.jpg" alt="horse-trailer" style="width: 225px; height:190px">
+			<img src="assets/images/m291a.jpg" alt="horse=trailer" style="width: 290px; height: 190px">
+			<img src="assets/images/e4b21c7bddb97a48f055722cc4535e1a.jpg" alt="horse-trailer" style="width: 270px; height: 190px">
 		</div>
 
 		<div class="container">
