updated code in css

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 
 		</section>
 
-<img src="url" alt="some_text" style="width:width;height:height;">
+<img src="assets/images/can-stock-photo_csp13072850.jpg" alt="pony-express" style="width:185px;height:190px;">
 	</main>
 	<footer>
 		<div class="container">
