--- a/vets-farriers.html
+++ b/vets-farriers.html
@@ -29,7 +29,7 @@
 				<a href="index.html">| Welcome! |</a>
 				<a href="stables-lessons.html">Lessons and Stables |</a>
 				<a href="tack-apparel.html">Tack and Apparel |</a>
-				<a href="vets-farriers.html">Veterinarians and Farriers</a>
+				<a href="vets-farriers.html">Veterinarians and Farriers |</a>
 				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers |</a>
 				<a href="contact.html">Contact Us |</a>
 			</nav>
