--- a/index.html
+++ b/index.html
@@ -30,30 +30,32 @@
 		<div class="container">
 			<a href="index.html" id="logo">Much ADO! Home</a>
 			<nav>
-				<a href="index.html">| Welcome! |</a>
-				<a href="stables-lessons.html">Lessons and Stables</a>
-				<a href="tack-apparel.html">Tack and Apparel</a>
-				<a href="vets-farriers.html">Veterinarians and Farriers</a>
-				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers</a>
+				<a href="index.html">| Welcome! | </a>
+				<a href="stables-lessons.html">Lessons and Stables | </a>
+				<a href="tack-apparel.html">Tack and Apparel | </a>
+				<a href="vets-farriers.html">Veterinarians and Farriers | </a>
+				<a href="feed-supplies-trailers.html">Barn Supplies, Feed, and Trailers |</a>
 				<a href="contact.html">Contact Us |</a>
 			</nav>
 		</div>
 	</header>
-			<h2>Resources for</h2>
-			<h2>Horse Owners | Lovers | Dreamers</h2>	
+			<h2>Where To Find What</h2>
+			<h2>Horse Owners | Lovers | Dreamers Need</h2>	
 
 		</section>
 		<div class="main">
-			<p>When I became involved in the horse world 14 years ago, I wished I could have had a “one stop shopping” directory to find the information I needed. So I have “entered at A”* to begin to meet your information needs.</p>
+			<p>When I became involved in the horse world 14 years ago, I wished I could have had a “one stop shopping” directory to find the information I needed. All that was available then were the "Yellow Pages." So I have “entered at A”* to begin to meet your information needs.</p>
 
 			<p>Inside you will find lists of service providers, shops, and suppliers and short descriptions of their services and products.  Most of these listed have a web presence through their own sites, Facebook pages or inclusion on sites like “Yelp” and “New Horse.”</p>
 			<p>Thanks for stopping by!</p>
 			<br>
-			<p>(Enter at 'A' to start your dressage test!)</p>
+				<italics>
+					<p>(Enter at 'A' to start your dressage test!)</p>
+				</italics>
 			</div>
 
-		<div class="images">
-			<img src="assets/images/http-%2F%2Fcdn.evbuc.com%2Fimages%2F23021409%2F182915734575%2F1%2Foriginal.jpg" alt="horse-riders" style="width: 400px;height: 200px;">
+		<div class="images"><center>
+			<img src="assets/images/http-%2F%2Fcdn.evbuc.com%2Fimages%2F23021409%2F182915734575%2F1%2Foriginal.jpg" alt="horse-riders" style="width: 400px;height: 200px;"></center>
 		</div>
 	</main>
 
