--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 		</div>
 	</header>
 
-		<div id="main-container" class="container">
+		<div id="main-container" class="container clearfix">
 		<section class="main-section">
 			<h2>Contact</h2>
 
@@ -48,6 +48,7 @@
 		</div>
 
 			<form id="contact-form">
+				<fieldset>
 				<ul>
 					<li>
 						<label for="name">Name</label>
@@ -63,12 +64,16 @@
 					</li>
 				</ul>
 				<input type="submit">
+				</fieldset>
 			</form>
 
 		</section>
 
-<img src="assets/images/can-stock-photo_csp13072850.jpg" alt="pony-express" style="width:185px;height:190px;">
+		<div class="ponyexpress">
+			<img src="assets/images/can-stock-photo_csp13072850.jpg" alt="pony-express" style="width: 300px; height:340px">
+		</div>
 	</main>
+	
 	<footer>
 		<div class="container">
 			<div class="col-med-2"></div>
