--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
 			<p>Inside you will find lists of service providers, shops, and suppliers and short descriptions of their services and products.  Most of these listed have a web presence through their own sites, Facebook pages or inclusion on sites like “Yelp” and “New Horse.”</p>
 			<p>Thanks for stopping by!</p>
 			<br>
-				<italics>
-					<p>(Enter at 'A' to start your dressage test!)</p>
-				</italics>
+					<p>* (Enter at 'A' to start your dressage test!)</p>
 			</div>
 
 		<div class="images"><center>
