--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,12 @@
 </head>
 <body>
 
+ 	<!-- jumbotron banner -->
 	<main class="container">
 		<div class="jumbotron">
 			<h2>Contact Us!</h2>
 		</div>
+
 	<!--navigation bar with links to all pages -->
 	<header id="masthead">
 		<div class="container">
@@ -36,17 +38,18 @@
 			</nav>
 		</div>
 	</header>
-
 		<div id="main-container" class="container clearfix">
+	<!-- contact form here -->
 		<section class="main-section">
 			<h2>Contact</h2>
 
-		<div class="row">
-			<div class="col-med-2"></div>
-				<div class="col-med-8">Let us know how we're doing, or if any changes need to be added.</div>
-			<div class="col-med-2"></div>
-		</div>
+			<div class="row">
+				<div class="col-med-2"></div>
+					<div class="col-med-8">Let us know how we're doing, or if any changes need to be added.</div>
+				<div class="col-med-2"></div>
+			</div>
 
+		<form method="post" action="show-data.php">
 			<form id="contact-form">
 				<fieldset>
 				<ul>
@@ -69,20 +72,23 @@
 
 		</section>
 
+		<!-- section for a cartoon -->
 		<div class="ponyexpress">
 			<img src="assets/images/can-stock-photo_csp13072850.jpg" alt="pony-express" style="width: 300px; height:340px">
 		</div>
 	</main>
+	</form>
 	
+	<!-- footer information -->
 	<footer>
 		<div class="container">
 			<div class="col-med-2"></div>
 				<div class="col-med-8">
-			&copy; Copyright 2017 Jay M. Frimmel
+					&copy; Copyright 2017 Jay M. Frimmel
+				</div>
+			<div class="col-med-2"></div>
 		</div>
-		<div class="col-med-2"></div>
-	</div>
 	</footer>
-	</body>
 
+	</body>
 	</html>
