added code css and contact

--- a/contact.html
+++ b/contact.html
@@ -69,12 +69,12 @@
 				<input type="submit">
 				</fieldset>
 			</form>
-
+		</form>
 		</section>
 
 		<!-- section for a cartoon -->
 		<div class="ponyexpress">
-			<img src="assets/images/can-stock-photo_csp13072850.jpg" alt="pony-express" style="width: 300px; height:340px">
+			<img src="assets/images/can-stock-photo_csp13072850.jpg" class="img-responsive" alt="pony-express" style="width: 290px; height:330px">
 		</div>
 	</main>
 	</form>
