--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,9 @@
 				<div class="col-med-2"></div>
 			</div>
 
+		<div class="container">
+			<div class="row">
+			<div class="col-med-8">
 		<form method="post" action="show-data.php">
 			<form id="contact-form">
 				<fieldset>
@@ -70,11 +73,18 @@
 				</fieldset>
 			</form>
 		</form>
+			</div>
+			</div>
+		</div>	
 		</section>
 
 		<!-- section for a cartoon -->
 		<div class="ponyexpress">
+		<div class="row">
+			<div class="col-med-4">
 			<img src="assets/images/can-stock-photo_csp13072850.jpg" class="img-responsive" alt="pony-express" style="width: 290px; height:330px">
+			</div>
+			</div>
 		</div>
 	</main>
 	</form>
